[package]
name = "inky-frame-rust-image-loader"
version = "0.1.0"
edition = "2021"


[dependencies]
embassy-sync = { version = "0.5.0", path = "../../embassy-rs/embassy/embassy-sync", features = [
    "defmt",
] }
embassy-executor = { version = "0.4.0", path = "../../embassy-rs/embassy/embassy-executor", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
    "nightly"
] }
embassy-time = { version = "0.2.0", path = "../../embassy-rs/embassy/embassy-time", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.1.0", path = "../../embassy-rs/embassy/embassy-rp", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }

embassy-futures = { version = "^0.1.1", path = "../../embassy-rs/embassy/embassy-futures" }

defmt = "0.3"
defmt-rtt = "0.4"

#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = [
    "async-await",
    "cfg-target-has-atomic",
    "unstable",
] }
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
shared-bus = { version = "0.2.4", features = ["cortex-m"] }
embedded-hal = "0.2.7"
embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0" }
embedded-hal-async = "1.0.0"
inky-frame-rs = { version = "0.1.0", path = "../inky-frame-rs", features = [
    "defmt",
] }
embedded-io = { version = "0.4.0", features = ["async", "defmt"] }
static_cell = "1.0.0"
log = "0.4"
tinybmp = "0.5.0"
embedded-hal-bus = "0.1.0"

[features]
include_firmware = []
default = ["include_firmware"]

[[bin]]
name = "inky-frame-rust-image-loader"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
